Update QuizResultGroup mapping to use QuizDto.Response::getId